CMAKE_MINIMUM_REQUIRED(VERSION 3.7.2)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR}/../../../cmake_modules/)
INCLUDE( CaPTk_macros )

SET( PROJECT_NAME BreastTexturePipeline )

CAPTK_ADD_PROJECT( ${PROJECT_NAME} 1.6.2 )

if( NOT TARGET CaPTk_CBICATk )
ADD_SUBDIRECTORY( ${PROJECT_SOURCE_DIR}/../../cbica_toolkit/ CaPTk_CBICATk ) # takes care of find_itk
endif()
if( NOT TARGET CaPTk_Common )
ADD_SUBDIRECTORY( ${PROJECT_SOURCE_DIR}/../../common/ CaPTk_Common ) # takes care of find_itk
endif()
if( NOT TARGET FeatureExtraction )
ADD_SUBDIRECTORY( ${PROJECT_SOURCE_DIR}/../FeatureExtraction/ FeatureExtraction ) 
endif()

CAPTK_INITIAL_SETUP()

INCLUDE_DIRECTORIES( ${CACHED_INCLUDE_DIRS} )

CAPTK_ADD_EXECUTABLE( ${PROJECT_NAME} "${APPLICATION_SOURCES};${APPLICATION_DEPENDS}" ${LIBNAME_CBICATK} )

ADD_DEPENDENCIES( ${PROJECT_NAME} ${LIBNAME_CBICATK} FeatureExtraction )